--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+
 @font-face {
   font-family: "Peepo";
   src: url("/fonts/Peepo.ttf") format("ttf");
